# sciter-linux

./: .gitignore  CMakeLists.txt  main.cpp  resources.cpp  sciter  sciter-js-sdk  update_resources.sh  usciter.cpp
ui/: main.htm
